--- a/src/game.yml
+++ b/src/game.yml
@@ -1,4 +1,4 @@
-"$schema": "https://github.com/ManualForArchipelago/Manual/raw/main/schemas/Manual.game.schema.json",
+"$schema": "https://github.com/ManualForArchipelago/Manual/raw/main/schemas/Manual.game.schema.json"
 "game": "HiFiRush"
 "creator": "tustin2121"
 "filler_item_name": "Gears"
