--- a/src/options.yml
+++ b/src/options.yml
@@ -1,4 +1,4 @@
-"$schema": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.options.schema.json",
+"$schema": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.options.schema.json"
 #Add a _ before an option name to comment it out and it wont be added to the apworld
 core:
   goal:
@@ -92,7 +92,7 @@ user:
     description: Is the Dlc enabled?
     type: "Toggle"
     visibility: 
-      simple_ui
-      complex_ui
-      template
+      - simple_ui
+      - complex_ui
+      - template
     default: true
