--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "archipelago": "^0.6.4"
+  },
   "keywords": [
     "archipelago"
   ],
@@ -13,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^7.0.1",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "semver": "^7.7.3"
   }
 }
