--- a/src/game.yml
+++ b/src/game.yml
@@ -1,5 +1,5 @@
 "$schema": "https://github.com/ManualForArchipelago/Manual/raw/main/schemas/Manual.game.schema.json"
 "game": "HiFiRush"
-"creator": "tustin2121"
+"creator": "Tustin2121"
 "filler_item_name": "Gears"
 "starting_items": []
