--- a/src/regions.yml
+++ b/src/regions.yml
@@ -7,7 +7,7 @@ Hideout:
     - Track 5
     - Track 6
     - Track 7
-    - Track 8
+    - Track 8 Outside
     - Track 9
     - Track 10
     - Track 11
@@ -15,15 +15,17 @@ Hideout:
   starting: true
   requires: []
 
-Track 1: { connects_to: [], requires: "|Track 1 Access|" }
-Track 2: { connects_to: [], requires: "|Track 2 Access|" }
-Track 3: { connects_to: [], requires: "|Track 3 Access|" }
-Track 4: { connects_to: [], requires: "|Track 4 Access|" }
-Track 5: { connects_to: [], requires: "|Track 5 Access|" }
-Track 6: { connects_to: [], requires: "|Track 6 Access|" }
-Track 7: { connects_to: [], requires: "|Track 7 Access|" }
-Track 8: { connects_to: [], requires: "|Track 8 Access|" }
-Track 9: { connects_to: [], requires: "|Track 9 Access|" }
-Track 10: { connects_to: [], requires: "|Track 10 Access|" }
-Track 11: { connects_to: [], requires: "|Track 11 Access|" }
-Track 12: { connects_to: [], requires: "|Track 12 Access|" }
+Track 1:         { connects_to: [], requires: "|Track 1 Access|" }
+Track 2:         { connects_to: [Track 2 Back], requires: "|Track 2 Access|" }
+Track 2 Back:    { connects_to: [], requires: "|Peppermint Summon|" }
+Track 3:         { connects_to: [], requires: "|Track 3 Access|" }
+Track 4:         { connects_to: [], requires: "|Track 4 Access| and |Macaron Summon|" }
+Track 5:         { connects_to: [], requires: "|Track 5 Access|" }
+Track 6:         { connects_to: [], requires: "|Track 6 Access|" }
+Track 7:         { connects_to: [], requires: "|Track 7 Access|" }
+Track 8 Outside: { connects_to: [Track 8], requires: "|Track 8 Access|" }
+Track 8:         { connects_to: [], requires: "|Korsica Summon|" }
+Track 9:         { connects_to: [], requires: "|Track 9 Access|" }
+Track 10:        { connects_to: [], requires: "|Track 10 Access|" }
+Track 11:        { connects_to: [], requires: "|Track 11 Access|" }
+Track 12:        { connects_to: [], requires: "|Track 12 Access|" }
