--- a/src/meta.yml
+++ b/src/meta.yml
@@ -1,3 +1,6 @@
+%YAML 1.2
+%OUTPUT direct
+---
 "$schema": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.meta.schema.json"
 # remove the _ before a non-comment/info propertie to enable it
 # For more info use json schemas to get a description and allowed value for every properties
