--- a/src/options.yml
+++ b/src/options.yml
@@ -1,3 +1,6 @@
+%YAML 1.2
+%OUTPUT direct
+---
 "$schema": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.options.schema.json"
 #Add a _ before an option name to comment it out and it wont be added to the apworld
 core:
@@ -6,7 +9,7 @@ core:
     display_name: The End Objective
     # description: How to End your Randomized playthrough.
     description: |
-      How to end your playthrough:
+      How to end your play-through:
       defeat kale - Win the game by defeating Kale in Track 12.
       defeat track 11 - Win the game by completing Track 11, which is easier than fighting Kale.
     aliases: 
@@ -23,6 +26,12 @@ core:
       recommended: 20
 
 user:
+  post_game:
+    type: Toggle
+    description: Assume for logic purposes that you are playing on a file that has completed the main play-through.
+    default: true
+    hidden: true
+    
   upgrade_sanity:
     type: Toggle
     description: Grant checks for picking up Life Gauge (26), Health Tank (10), and Reverb Core (?) pieces (? locations)
